# jansky-observe

./: .gitignore  CHANGES.md  CITATION.cff  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: README.md
.claude/agents/: dsp-reviewer.md  hi-data-analyst.md
.claude/skills/analyze-observation/: SKILL.md
.claude/skills/compare-observations/: SKILL.md
.claude/skills/new-migration/: SKILL.md
.claude/skills/observing-copilot/: SKILL.md
.claude/skills/pi-status/: SKILL.md
.claude/skills/plan-session/: SKILL.md
.claude/skills/radio-quiet/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/synthetic-fixture/: SKILL.md
.claude/skills/troubleshoot-chain/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/write-up/: SKILL.md
.github/workflows/: ci.yml  e2e.yml  release.yml
deploy/: OS_IMAGE  README.md  install.sh
deploy/qemu/: run-install-test.sh
deploy/systemd/: jansky-observe-capture.service  jansky-observe.service
deploy/udev/: 99-jansky-observe-sdr.rules
plans/: funding.md  jansky_observe.md  m10-onoff-and-skyground.md  m11-hi-mapping.md  m12-model-overlay-and-radiometer.md  roadmap-post-v0.6.md
src/jansky_observe/: __init__.py  config.py  control.py  db.py  frames.py  gps.py  models.py  photos.py  seeds.py  synthetic.py
src/jansky_observe/astro/: __init__.py  hi_reference.py  lsr.py  pointing.py  rotator.py  skychart.py  stellarium.py
src/jansky_observe/capture/: __init__.py  airspy_cli.py  daemon.py  dsp.py  hackrf_sweep.py  profiles.py  sources.py  writer.py
src/jansky_observe/confirm/: __init__.py  baseline.py  classifier.py  mapping.py  noise.py  onoff.py  plots.py  radiometer.py  skyground.py
tests/: fake_airspy_rx.py  fake_hackrf_sweep.py  test_airspy_cli.py  test_baseline.py  test_bundle.py  test_calibration.py  test_campaigns.py  test_captures_api.py  test_classifier.py  test_cli.py  test_confirm_plots.py  test_daemon.py  test_daemon_control.py  test_db.py  test_deploy_fps.py  test_diagnostics.py  test_dsp.py  test_export_formats.py  test_export_pdf.py  test_frames.py  test_gps.py  test_guides.py  test_hackrf_sweep.py  test_hi_reference.py  test_live_badge.py  test_lsr.py  test_mapping.py  test_maps.py  test_mcp.py  test_models.py  test_noise.py  test_onoff.py  test_overlay.py  test_photos.py  test_pointing.py  test_profiles.py  test_radiometer.py  test_reports_api.py  test_rotator.py  test_rotator_routes.py  (+15 more)
tests/e2e/: _helpers.py  conftest.py  test_capture.py  test_smoke.py  test_wizard.py
(+82 files in other folders)
